--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Form_Inicio.Designer.cs">
       <DependentUpon>Form_Inicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCLientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCLientes.Designer.cs">
+      <DependentUpon>frmCLientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form_Inicio.resx">
