--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -61,6 +61,12 @@
     <Compile Include="frmCLientes.Designer.cs">
       <DependentUpon>frmCLientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmProductos.Designer.cs">
+      <DependentUpon>frmProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form_Inicio.resx">
