--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -63,6 +63,18 @@
     <Compile Include="frmCLientes.Designer.cs">
       <DependentUpon>frmCLientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmExportarClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmExportarClientes.Designer.cs">
+      <DependentUpon>FrmExportarClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmExportarProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmExportarProductos.Designer.cs">
+      <DependentUpon>FrmExportarProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmProductos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +94,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCLientes.resx">
       <DependentUpon>frmCLientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmExportarClientes.resx">
+      <DependentUpon>FrmExportarClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmExportarProductos.resx">
+      <DependentUpon>FrmExportarProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmProductos.resx">
       <DependentUpon>frmProductos.cs</DependentUpon>
